# nox-thesis

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: macros.cmake
include/nox/: CMakeLists.txt  application.h  common_types.h  input.h  input_identifiers.h  window.h
include/nox/assets/: CMakeLists.txt  asset.h  asset_factory.h  asset_manager.h
include/nox/compute/: CMakeLists.txt  compute.h  compute_buffer.h  compute_image.h  compute_kernel.h  compute_object.h  compute_program.h
include/nox/events/: CMakeLists.txt  event_delegate.h  event_dispatcher.h  keyboard_event.h  mouse_event.h  window_event.h
include/nox/graphics/: CMakeLists.txt  camera.h  camera_controller.h  image.h  light.h  model.h
scripts/: build_nox_visual.bat
src/: CMakeLists.txt  application.cpp  input.cpp  window.cpp
src/assets/: CMakeLists.txt  asset_manager.cpp
src/compute/: CMakeLists.txt  compute.cpp  compute_api.cpp  compute_api.h  compute_program.cpp
src/debug/: CMakeLists.txt  debug_helpers.cpp  debug_helpers.h
src/graphics/: CMakeLists.txt  assimp_helper.cpp  assimp_helper.h  camera.cpp  camera_controller.cpp  image.cpp  light.cpp  model.cpp
src/maths/: CMakeLists.txt  bounding_box.cpp
src/renderer/: CMakeLists.txt  buffer_layout.cpp  element_buffer.cpp  framebuffer.cpp  renderer.cpp  renderer_api.cpp  renderer_api.h  renderer_context.cpp  renderer_context.h  shader.cpp  texture.cpp  vertex_buffer.cpp
src/utilities/: CMakeLists.txt  file_helper.cpp  file_helper.h  logger.cpp  logger.h  timer.cpp  timer.h
src/windows/: CMakeLists.txt  windows_window.cpp  windows_window.h
(+51 files in other folders)
